Change bg color to gray

--- a/layouts/index.html
+++ b/layouts/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="css/styles.css">
 </head>
 
-<body class="bg-green-500">
+<body class="bg-gray-500">
     <h1 class="text-3xl font-bold text-white m-4">Test</h1>
 </body>
 
