--- a/layouts/index.html
+++ b/layouts/index.html
@@ -10,7 +10,7 @@
 </head>
 
 <body class="bg-gray-500">
-    <h1 class="text-3xl font-bold text-white m-4">Test</h1>
+    <h1 class="text-3xl font-bold text-white m-4">Test B</h1>
 </body>
 
 </html>
